FEAT: Universal build
Finished build for html, css, js, scss, pug, image/html/css/js
minimization, fonts and clearing dist folder. All the settings are
moved to external config files. Also it's possible to use data in
pug from external json

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,16 +1,27 @@
-.test {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  &__box {
-    font-size: 12px;
-    margin: 0 auto;
-    padding: 15px;
-  }
+$default-var: 10px;
 
-  .another {
-    margin: 0;
-    padding: 0;
+@mixin someName {
+  @media (max-width: 700px) {
+    @content;
   }
 }
+
+.title {
+  font-size: 24px;
+  color: yellow;
+}
+
+body {
+  @include someName {
+    color: #000;
+    background-color: purple;
+  }
+}
+
+.news {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
+
+@import 'components/*.scss';
