FEAT: Webpack build done
Experienced the bundler with almost all needed options to run a
project with that build(html, css, sass, js, ts, react, fonts, images
and so on...). Also have some bonuses, as eslint config with babel

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,9 @@
 @import 'components/header.css';
+@import 'fonts.css';
+@import '~normalize.css';
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
 .title {
   font-size: 24px;
