--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@use 'components/header';
 $default-var: 10px;
 
 @mixin someName {
@@ -23,5 +24,3 @@ body {
   height: 100px;
   background-color: green;
 }
-
-@import 'components/*.scss';
